--- a/kube/app.yaml
+++ b/kube/app.yaml
@@ -123,7 +123,7 @@ spec:
    targetPort: 5000
  selector:
    app: flask-number
- type: NodePort
+ type: ClusterIP
 ---
 apiVersion: v1
 kind: Service
@@ -136,7 +136,7 @@ spec:
    targetPort: 5000
  selector:
    app: flask-letter
- type: NodePort
+ type: ClusterIP
 ---
 apiVersion: v1
 kind: Service
@@ -149,7 +149,7 @@ spec:
    targetPort: 5000
  selector:
    app: flask-sequence
- type: NodePort
+ type: ClusterIP
 ---
 apiVersion: v1
 kind: Service
@@ -162,4 +162,4 @@ spec:
    targetPort: 5000
  selector:
    app: flask-prize
- type: NodePort
+ type: ClusterIP
